calculator.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  width: 100vw;
  height: 100vh;
  background: linear-gradient(
    90deg,
    rgba(22, 22, 22, 0.3) 0% 10%,
    rgb(247, 245, 245),
    rgba(22, 22, 22, 0.3) 90%
  );
}

body,
.eval {
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  border-radius: 2em;
  position: relative;
  display: flex;
  flex-direction: column;
}

.history {
  z-index: 3;
  position: absolute;
  left: 0;
  top: 0;
  visibility: hidden;
  padding: 0.25em;
  background-color: rgb(0, 0, 0);
  color: rgb(255, 255, 255);
  height: 90%;
  width: 90%;
  border-radius: 1em;

  .history-header {
    padding: 0.125em 0.5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 1em;

    span {
      font-size: 1.3em;
      font-weight: 800;
    }

    button {
      background-color: rgb(255, 0, 0);
      color: rgb(255, 255, 255);
      border-radius: 30%;
      padding: 0.3em;
      border: none;
    }
  }

  .history-values {
    overflow-y: auto;
    width: 100%;
    max-height: 300px;
    padding: 0.25em;
    text-align: right;
    word-wrap: break-word;

    .stored-eval {
      color: rgb(8, 211, 8);
    }
  }

  .history-values > div {
    background-color: rgb(50, 50, 50);
    padding: 0.125em 0.5em;
    border-radius: 1em;
    border-bottom: rgb(0, 0, 0) 0.25em solid;

    div:first-child {
      font-size: 0.725em;
    }
  }
}

.history.visible {
  visibility: visible;
}

.wrapper {
  flex: 1;
  width: 25em;
}

.wrapper:nth-child(2) {
  border-radius: 2em 2em 0 0;
  background-image: linear-gradient(
    180deg,
    rgba(104, 98, 98, 0.3) 30%,
    rgb(231, 228, 209)
  );

  .expression-container {
    position: relative;
    overflow-y: auto;
  }

  .expression {
    font-size: 0.8rem;
    text-align: right;
    transition: 0.3s ease-out;
  }

  .expression.evaluated {
    font-size: 1.2rem;
    position: absolute;
    width: 100%;
    height: 100%;
    transition: 0.3s ease-in;
  }

  .eval {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
      sans-serif;
    text-align: center;
  }

  .eval,
  .expression-container {
    min-height: 2.4em;
    max-height: 2.4em;
  }

  .expression,
  .eval {
    word-wrap: break-word;
    overflow-y: auto;
    line-height: 1.2em;
    padding: 0 1em;
  }

  .eval,
  .expression.evaluated {
    color: rgb(0, 120, 0);
    font-weight: 700;
    font-style: italic;
  }

  .eval.error,
  .eval.digitError {
    color: rgb(247, 15, 15);
  }
}

.wrapper:nth-child(2),
.row {
  padding: 0.5em 1em;
}

.wrapper:last-of-type,
.row:last-of-type {
  border-radius: 0 0 2em 2em;
}

.row {
  background-color: rgba(22, 22, 22, 0.3);
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
}

.char {
  text-align: center;
  font-weight: 800;
  width: 3em;
  height: 2em;
  line-height: 2em;
  border-radius: 20%;
  background-color: rgba(255, 255, 255, 0.438);
  user-select: none;
}

.row1 .char1 {
  background-color: rgb(219, 17, 17);
  color: rgb(240, 236, 236);
}

.row6 .char4 {
  background-color: rgb(7, 119, 4);
  color: rgb(240, 236, 236);
}

.row:last-of-type {
  padding-bottom: 1.3em;
}

.char.active {
  scale: 120%;
  border-radius: 20%;
  color: rgb(255 255 255);
  background-color: rgba(17, 17, 17, 0.514);
  box-shadow: 0 0 1em white;
}

.char,
[data-value="close"] {
  cursor: pointer;
}

.expression::before,
.eval::before {
  content: " ";
}

@media (max-width: 600px) {
  .char {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 1.5em;
    border-radius: 15%;
  }

  .wrapper {
    width: 19em;
  }
}

